--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <link rel="icon" type="image/png" sizes="32x32" href="./images/processor.png" />
-    <title>Admin Dashboard | Activity tracking for Better Performance</title>
+    <title>Admin Dashboard | Activity tracking for Performance</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='admin.css'>
     
