--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./images/processor.png" />
     <title>Admin Dashboard | Activity tracking for Performance</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='admin.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
     
 </head>
 <body>
